--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Edu Klein home
+name: Edu Klein
 
 # Name of the author
 author: Eduardo Klein
 
 # Short bio or description (displayed in the header)
-description: Leadership, management, software engineering and random stuff
+description: Leadership, management, software and random stuff
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/favicon.jpg
