Improved home page and main navigation

--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ plugins:
 include: ['_pages']
 
 paginate: 6
-paginate_path: /page:num/
+paginate_path: /blog/page:num/
 
 # Exclude these files from your production _site
 exclude:
