Add e-mail to footer links

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ avatar: /images/favicon.jpg
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: 
+  email: contato@eduklein.com.br
   facebook:
   flickr:
   github: epklein
