--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ google_analytics_ga4: G-MWDW3CZ449
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
-url: http://eduklein.com.br
+url: https://eduklein.com.br
 enforce_ssl: https://eduklein.com.br
 
 # If you're hosting your site at a Project repository on GitHub pages
