--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "default", "air", "aqua", "contrast", "da
 locale                   : "en-US"
 title                    : "Edu Klein homepage"
 title_separator          : "-"
-subtitle                 : "Leadership, management, software and random stuff"
+subtitle                 : "Leadership, management, software, and random stuff"
 name                     : "Eduardo Klein"
 description              : "Edu Klein's thoughts about leadership, management, software development and random stuff"
 url                      : https://eduklein.com.br
@@ -227,10 +227,10 @@ whitelist:
 #  - <base_path>/my-awesome-category/index.html ~> path: /
 category_archive:
   type: liquid
-  path: /categories/
+  path: /categories
 tag_archive:
   type: liquid
-  path: /tags/
+  path: /tags
 # https://github.com/jekyll/jekyll-archives
 # jekyll-archives:
 #   enabled:
@@ -260,7 +260,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
       show_date: true
       comments: # true
@@ -273,4 +273,4 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
