--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,17 +13,17 @@ main:
 mgmt:
   - title: "Management"
     url: /mgmt
-  # - title: "Self Management"
-  #   url: /mgmt/self
-  #   children:
-  #     - title: "Weekly planning"
-  #       url: /mgmt/self/weekly-planning
-  #     - title: "Daily planning"
-  #       url: /mgmt/self/daily-planning
-  #     - title: "Weekly retrospective"
-  #       url: /mgmt/self/weekly-retro
-  #     - title: "Monthly retrospective"
-  #       url: /mgmt/self/monthly-retro
+  - title: "Self Management"
+    url: /mgmt/self
+    children:
+      - title: "Weekly planning"
+        url: /mgmt/self/weekly-planning
+      - title: "Daily planning"
+        url: /mgmt/self/daily-planning
+      - title: "Weekly retrospective"
+        url: /mgmt/self/weekly-retro
+      - title: "Monthly retrospective"
+        url: /mgmt/self/monthly-retro
   - title: "People Management"
     url: /mgmt/people
     children: 
