--- a/_config.yml
+++ b/_config.yml
@@ -255,7 +255,16 @@ compress_html:
 collections:
   mgmt:
     output: true
-    permalink: /:collection/:path/
+    order:
+      - management.md
+      - self/self-management.md
+      - self/self-mgmt-weekly-planning.md
+      - self/self-mgmt-daily-planning.md
+      - self/self-mgmt-weekly-retro.md
+      - self/self-mgmt-monthly-retro.md
+      - people/people-management.md
+      - people/ppl-mgmt-delegation.md
+      - swe/swe-management.md
 
 # Defaults
 defaults:
