Change search engine

--- a/_config.yml
+++ b/_config.yml
@@ -61,9 +61,9 @@ atom_feed:
   hide                   : # true, false (default)
 search                   : true # true, false (default)
 search_full_content      : true # true, false (default)
-search_provider          : google # lunr (default), algolia, google
+search_provider          : lunr # lunr (default), algolia, google
 lunr:
-  search_within_pages    : # true, false (default)
+  search_within_pages    : true # true, false (default)
 algolia:
   application_id         : # YOUR_APPLICATION_ID
   index_name             : # YOUR_INDEX_NAME
@@ -268,6 +268,7 @@ collections:
 
 # Defaults
 defaults:
+
   # _posts
   - scope:
       path: ""
@@ -298,3 +299,4 @@ defaults:
       author_profile: false
       sidebar:
         nav: "mgmt"
+  
