--- a/_config.yml
+++ b/_config.yml
@@ -196,13 +196,13 @@ sass:
 
 # Outputting
 permalink: /:title/
-# paginate: 6 # amount of posts to show
-# paginate_path: blog/:num/
-
+paginate: 6
+paginate_path: /blog/page:num
 
 # Plugins (previously gems:)
 plugins:
   - jekyll-remote-theme
+  - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
@@ -211,6 +211,7 @@ plugins:
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-sitemap
+  - jekyll-paginate
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
