New WIP page: SWE Career

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,3 +31,6 @@ mgmt:
       url: /mgmt/people/delegation
   - title: "SWE Management"
     url: /mgmt/swe
+    children:
+    - title: SWE Career
+      url: /mgmt/swe/swe-career
