--- a/_config.yml
+++ b/_config.yml
@@ -229,10 +229,10 @@ whitelist:
 
 category_archive:
   type: liquid
-  path: /categories/
+  path: /categories
 tag_archive:
   type: liquid
-  path: /tags/
+  path: /tags
 # https://github.com/jekyll/jekyll-archives
 # jekyll-archives:
 #   enabled:
