Improve home pagination

--- a/_config.yml
+++ b/_config.yml
@@ -196,8 +196,8 @@ sass:
 
 # Outputting
 permalink: /:title/
-paginate: 6
-paginate_path: /blog/page:num
+paginate: 12
+paginate_path: /page:num
 
 # Plugins (previously gems:)
 plugins:
