--- a/_config.yml
+++ b/_config.yml
@@ -207,6 +207,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
+  - jekyll-redirect-from
 
 # mimic GitHub Pages with --safe
 whitelist:
@@ -215,6 +216,7 @@ whitelist:
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
+  - jekyll-redirect-from
 
 # Archives
 #  Type
@@ -306,4 +308,3 @@ defaults:
       author_profile: false
       sidebar:
         nav: "mgmt"
-  
