--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "default", "air", "aqua", "contrast", "da
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Edu Klein homepage"
+title                    : "Edu Klein"
 title_separator          : "-"
 subtitle                 : "Leadership, management, software, and random stuff"
 name                     : "Eduardo Klein"
