--- a/_config.yml
+++ b/_config.yml
@@ -59,11 +59,11 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : # true, false (default)
-search                   : true # true, false (default)
-search_full_content      : true # true, false (default)
+search                   : false # true, false (default)
+search_full_content      : false # true, false (default)
 search_provider          : lunr # lunr (default), algolia, google
 lunr:
-  search_within_pages    : true # true, false (default)
+  search_within_pages    : false # true, false (default)
 algolia:
   application_id         : # YOUR_APPLICATION_ID
   index_name             : # YOUR_INDEX_NAME
@@ -145,6 +145,7 @@ footer:
 # Reading Files
 include:
   - _pages
+  - _personal
 exclude:
   - vendor
   - .asset-cache
@@ -304,7 +305,7 @@ defaults:
       layout: single
       author_profile: false
 
-    # _mgmt
+  # _mgmt
   - scope:
       path: ""
       type: mgmt
@@ -313,3 +314,11 @@ defaults:
       author_profile: false
       sidebar:
         nav: "mgmt"
+
+  # _personal
+  - scope:
+      path: "_personal/**"
+    values:
+      layout: single
+      author_profile: false
+      sitemap: false
