--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ name                     : "Eduardo Klein"
 description              : "Edu Klein's thoughts about leadership, management, software development and random stuff"
 url                      : https://eduklein.com.br
 enforce_ssl              : https://eduklein.com.br
-baseurl                  : # the subpath of your site, e.g. "/blog"
+baseurl                  : / # the subpath of your site, e.g. "/blog"
 repository               : epklein/epklein.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
