--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,6 +21,8 @@ mgmt:
   - title: "People Management"
     url: /mgmt/people
     children: 
+    - title: "Leadership"
+      url: /leadership
     - title: "Communication"
       url: /mgmt/people/communication
     - title: "Delegation"
