Improve pages: Self Management

--- a/_config.yml
+++ b/_config.yml
@@ -276,6 +276,7 @@ collections:
       - people/ppl-mgmt-one-on-ones.md
       - team-management.md
       - self-management.md
+      - self/self-mgmt-personal-planning.md
       - self/self-mgmt-weekly-planning.md
       - self/self-mgmt-daily-planning.md
       - self/self-mgmt-weekly-retro.md
