--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -34,11 +34,5 @@ mgmt:
   - title: "Self Management"
     url: /mgmt/self
     children:
-      - title: "Weekly planning"
-        url: /mgmt/self/weekly-planning
-      - title: "Daily planning"
-        url: /mgmt/self/daily-planning
-      - title: "Weekly retrospective"
-        url: /mgmt/self/weekly-retro
-      - title: "Monthly retrospective"
-        url: /mgmt/self/monthly-retro
+      - title: "Personal Planning"
+        url: /mgmt/self/personal-planning
