Update my photos and favicon

--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "Eduardo Klein"
-  avatar           : "/images/favicon.jpg"
+  avatar           : "/_personal/photos/2023-06-VTEX-256.png"
   bio              : "Software engineering manager <nobr>@ VTEX</nobr>"
   location         : "Porto Alegre, Brazil"
   email            : contato@eduklein.com.br
