--- a/_config.yml
+++ b/_config.yml
@@ -292,7 +292,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: single
+      layout: post
       author_profile: false
       read_time: true
       show_date: true
