--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,8 @@ main:
     url: /mgmt
   - title: "Leadership"
     url: /leadership
+  - title: "Personal Development"
+    url: /personal-dev
   - title: "Reading"
     url: /reading
   - title: "Archive"
