--- a/_config.yml
+++ b/_config.yml
@@ -281,9 +281,16 @@ collections:
       - self/self-mgmt-daily-planning.md
       - self/self-mgmt-weekly-retro.md
       - self/self-mgmt-monthly-retro.md
-  books:
+  
+  swe:
     output: true
-  personal-dev:
+    order:
+      - swe.md
+      - devops.md
+      - devops/continuous-delivery.md
+      - cloud-computing.md
+
+  books:
     output: true
 
 # Defaults
@@ -320,15 +327,15 @@ defaults:
       sidebar:
         nav: "mgmt"
 
-  # _personal_dev
+  # _swe
   - scope:
       path: ""
-      type: personal_dev
+      type: swe
     values:
       layout: single
       author_profile: false
       sidebar:
-        nav: "personal-dev"
+        nav: "swe"
 
   # _books
   - scope:
