--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -53,5 +53,9 @@ swe:
       url: /swe/devops/continuous-delivery
   - title: "Cloud Computing"
     url: /swe/cloud-computing
+  - title: "Coding"
+    children:
+    - title: "Code Kata"
+      url: /swe/coding/code-kata
 
 personal-dev:
