--- a/_config.yml
+++ b/_config.yml
@@ -294,6 +294,7 @@ collections:
     output: true
     order:
       - personal-dev.md
+      - career-dev.md
       - mentoring.md
 
   books:
@@ -343,10 +344,10 @@ defaults:
       sidebar:
         nav: "swe"
 
-  # _personal_dev
+  # _personal-dev
   - scope:
       path: ""
-      type: personal_dev
+      type: personal-dev
     values:
       layout: single
       author_profile: false
