--- a/_config.yml
+++ b/_config.yml
@@ -125,6 +125,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/epklein"
+    - label: "The Mentoring Club"
+      icon: "fas fa-fw fa-user-circle"
+      url: "https://www.mentoring-club.com/the-mentors/eduardo-klein"
 
 # Site Footer
 footer:
