--- a/_config.yml
+++ b/_config.yml
@@ -59,8 +59,8 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : # true, false (default)
-search                   : false # true, false (default)
-search_full_content      : false # true, false (default)
+search                   : true # true, false (default)
+search_full_content      : true # true, false (default)
 search_provider          : lunr # lunr (default), algolia, google
 lunr:
   search_within_pages    : false # true, false (default)
@@ -267,6 +267,7 @@ compress_html:
 
 # Collections
 collections:
+  
   mgmt:
     output: true
     order:
@@ -366,7 +367,7 @@ defaults:
       classes: wide
       author_profile: false
 
-  # _personal
+    # _personal
   - scope:
       path: "_personal/**"
     values:
