--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Eduardo Klein"
   avatar           : "/_personal/photos/2023-06-VTEX-256.png"
-  bio              : "Engineering Manager <nobr>@ VTEX</nobr>"
+  bio              : "Software Engineering Manager <nobr>@ VTEX</nobr>"
   location         : "Porto Alegre, Brazil"
   email            : contato@eduklein.com.br
   links:
