--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "default", "air", "aqua", "contrast", "da
 locale                   : "en-US"
 title                    : "Edu Klein"
 title_separator          : "-"
-subtitle                 : "Leadership, management, software, and random stuff"
+subtitle                 : "Leadership, management, and software engineering"
 name                     : "Eduardo Klein"
 description              : "Edu Klein's thoughts about leadership, management, software development and random stuff"
 url                      : https://eduklein.com.br
@@ -284,9 +284,12 @@ collections:
     output: true
     order:
       - swe.md
-      - devops.md
+      - sdlc/design.md
+      - sdlc/deployment.md
+      - swe-devops.md
       - devops/continuous-delivery.md
-      - cloud-computing.md
+      - swe-cloud-computing.md
+      - coding/code-kata.md
 
   personal-dev:
     output: true
