--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -33,6 +33,8 @@ mgmt:
       url: /mgmt/people/communication
     - title: "Delegation"
       url: /mgmt/people/delegation
+    - title: "Performance Mgmt"
+      url: /mgmt/people/performance
     - title: "One-on-ones"
       url: /mgmt/people/one-on-ones
   - title: "Team Management"
