Improve personal images for page speed

--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "Eduardo Klein"
-  avatar           : "/_personal/photos/2023-06-VTEX-256.png"
+  avatar           : "/_personal/photos/2023-06-VTEX-128.webp"
   bio              : "Software Engineering Manager <nobr>@ VTEX</nobr>"
   location         : "Porto Alegre, Brazil"
   email            : contato@eduklein.com.br
