New page: Persuasion

--- a/_config.yml
+++ b/_config.yml
@@ -275,9 +275,10 @@ collections:
       - swe-management.md
       - swe/swe-career.md
       - people-management.md
-      - people/performance-management.md
       - people/communication.md
       - people/delegation.md
+      - people/persuasion.md
+      - people/performance-management.md
       - people/one-on-ones.md
       - team-management.md
 
