Include Mailchimp script

--- a/_config.yml
+++ b/_config.yml
@@ -72,6 +72,7 @@ algolia:
 google:
   search_engine_id       : 9917301fff9de22be
   instant_search         : # false (default), true
+
 # SEO Related
 google_site_verification :
 bing_site_verification   :
@@ -104,6 +105,10 @@ analytics:
   google:
     tracking_id          : "G-MWDW3CZ449"
     anonymize_ip         : false
+
+# Mailchimp
+head_scripts:
+  - /assets/js/mailchimp.js
 
 # Site Author
 author:
