--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ author:
   avatar           : "/_personal/photos/2023-06-VTEX-128.webp"
   bio              : "Software Engineering Manager <nobr>@ VTEX</nobr>"
   location         : "Porto Alegre, Brazil"
-  email            : contato@eduklein.com.br
+  email            : eduardo@eduklein.com.br
   links:
     - label: "Linkedin"
       icon: "fab fa-fw fa-linkedin"
