--- a/_config.yml
+++ b/_config.yml
@@ -282,19 +282,6 @@ collections:
       - swe-cloud-computing.md
       - coding/code-kata.md
 
-  personal-dev:
-    output: true
-    order:
-      - personal-dev.md
-      - self-mgmt.md
-      - self-mgmt/personal-planning.md
-      - self-mgmt/weekly-planning.md
-      - self-mgmt/daily-planning.md
-      - self-mgmt/weekly-retro.md
-      - self-mgmt/monthly-retro.md
-      - career-dev.md
-      - mentoring.md
-
   books:
     output: true
 
@@ -341,10 +328,9 @@ defaults:
       sidebar:
         nav: "swe"
 
-  # _personal-dev
+  # personal-dev
   - scope:
-      path: ""
-      type: personal-dev
+      path: "personal-dev"
     values:
       layout: single
       author_profile: false
