--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 remote_theme             : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "default" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -20,7 +20,7 @@ title                    : "Edu Klein"
 title_separator          : "-"
 subtitle                 : "Leadership, management, and software engineering"
 name                     : "Eduardo Klein"
-description              : "Edu Klein's thoughts about leadership, management, software engineering and random stuff"
+description              : "Edu Klein's thoughts about leadership, management, software development and random stuff"
 url                      : https://eduklein.com.br
 enforce_ssl              : https://eduklein.com.br
 baseurl                  : / # the subpath of your site, e.g. "/blog"
@@ -198,41 +198,36 @@ kramdown:
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
 
+
 # Sass/SCSS
 sass:
   sass_dir: _sass
   style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
+
 # Outputting
 permalink: /:title/
-timezone: Brazil/East # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-
-# Pagination with jekyll-paginate
 paginate: 12
-paginate_path: /page:num/
-
+paginate_path: /page:num
 
 # Plugins (previously gems:)
 plugins:
-  - jekyll-feed
-  - jekyll-gist
-  - jekyll-include-cache
-  - jekyll-paginate
-  - jekyll-polyglot
-  - jekyll-redirect-from
   - jekyll-remote-theme
+  - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jekyll-include-cache
+  - jekyll-redirect-from
 
 # mimic GitHub Pages with --safe
 whitelist:
-  - jekyll-feed
-  - jekyll-gist
-  - jekyll-include-cache
-  - jekyll-paginate
-  - jekyll-polyglot
-  - jekyll-redirect-from
-  - jekyll-remote-theme
   - jekyll-sitemap
+  - jekyll-paginate
+  - jekyll-gist
+  - jekyll-feed
+  - jekyll-include-cache
+  - jekyll-redirect-from
 
 # Archives
 #  Type
@@ -247,10 +242,10 @@ whitelist:
 
 category_archive:
   type: liquid
-  path: /categories/
+  path: /categories
 tag_archive:
   type: liquid
-  path: /tags/
+  path: /tags
 # https://github.com/jekyll/jekyll-archives
 # jekyll-archives:
 #   enabled:
@@ -344,9 +339,3 @@ defaults:
       layout: single
       author_profile: false
       sitemap: false
-
-# Polyglot
-languages: ["en", "pt"]
-default_lang: "en"
-exclude_from_localization: ["javascript", "images", "css", "public"]
-parallel_localization: true
