Improve leadership and communication sections

--- a/_config.yml
+++ b/_config.yml
@@ -296,6 +296,15 @@ defaults:
       layout: single
       author_profile: false
 
+  # leadership
+  - scope:
+      path: "_pages/leadership"
+    values:
+      layout: single
+      author_profile: false
+      sidebar:
+        nav: "leadership"
+
   # mgmt
   - scope:
       path: "_pages/mgmt"
