New Post: Traits and pitfalls in Software Engineering careers

--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ analytics:
 author:
   name             : "Eduardo Klein"
   avatar           : "/images/personal//2023-06-VTEX-128.webp"
-  bio              : "Software Engineering Manager <nobr>@ VTEX</nobr>"
+  bio              : "Senior Software Engineering Manager <nobr>@ VTEX</nobr>"
   location         : "Porto Alegre, Brazil"
   email            : eduardo@eduklein.com.br
   links:
